- Maintain Captain and Set piece taker when the line up is reversed.
- The old penalty shooter button is gone. Look for the new tab instead.
- Added ability to reset all positional orders in the line up tab.
- Calculate loyalty and homegrownbonus for set pieces and penalty takers.
- Fixed IFA module not to download matches before the user got the team.

Language updates:
-----------------
- Added Japanese as new HO language (thx nomad331).
- Updated Danish translations (thx Max_Schreck).
- Updated English translations (thx edswifa).
- Updated French translations (thx davidatorus).
- Updated Galego translations (thx GZ-grobas).
- Updated German translations (thx Werder0405).
- Updated Hangul (Korean) translations (thx SI-CH).
- Updated Nederlands translations (thx BrammieG).
- Updated Portugues translations (thx a_cardoso).
- Updated Romanian translations (thx DragosE).

ThemeManager:
------------
- New keys:
	. Icons: imagePanel.background, grassPanel.background, remove, transfer.in, transfer.out, MatchTypeTourneyGrp, MatchTypeTourneyPlayOff, exclamation-red, exclamation, control-double-090, control-double-270, order_set, plays_at_beginning, is_reserve, not_in_lineup, move_up, move_down, move_left, move_right, arrow_circle_double, arrow_move, substitution, clearPositionOrders
	. Colors: matchtype.tourneyGroup.bg, matchtype.tourneyFinals.bg, teamanalyzer.teamlist.league, teamanalyzer.teamlist.cup, teamanalyzer.teamlist.nexttournament, teamanalyzer.teamlist.tournament
- Fatcow-Theme: Added and updated some icons and colors.

Plugin (Module) Updates:
---------------
- Active developed Plugins are now integrated as modules, outdated and not more developed Plugins are NOT integrated/supported anymore.
	. Calendar, Commons, Converter, Feedback, PerformanceOverview, SeriesStats, StarCalc, Teamplanner and YouthClub were NOT integrated.
	. NTHRF, SpecialEvents, TeamAnalyzer, TeamOfTheWeek, TrainingExperience, Transfers, TS Forecast were integrated.