@@ -51,6 +51,7 @@ Changelist HO! 1.432
 - Added ability to reset all positional orders in the line up tab.
 - Calculate loyalty and homegrownbonus for set pieces and penalty takers.
 - Fixed IFA module not to download matches before the user got the team.
+- Removed Shirt number 100 for players without a shirt number.
 
 Language updates:
 -----------------
